2008-02-15  John Robeson  <johnny@localmomentum.net>
    * TABS to spaces
2008-02-15  John Robeson  <johnny@localmomentum.net>

    * remove gnomesu from desktop.in 
      Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=479771
2008-02-05  John Robeson  <johnny@localmomentum.net>

    * remove deprecated encoding key in desktop.in
    * add some X-GNOME keys to desktop.in

2008-01-30  John Robeson  <johnny@localmomentum.net>

    update gentoo support in configure.ac

2008-01-21  John Robeson  <johnny@localmomentum.net>

	typo fix mozilla_bookmarks.py s/implict_close_tags/implicit_close_tags/
    actually pass the excluded attributes  

2008-01-19  Hans Petter Jansson  <hpj@novell.com>

	Actual 2.21.0 release made here.

2008-01-17  Federico Mena Quintero  <federico@novell.com>

	* sabayon.spec.in: Removed; this specfile is really obsolete anyway.

	* Makefile.am: Remove references to the specfile.

2008-01-17  John Robeson <johnny@localmomentum.net>

    Make mandatory attribute in metadata xml files work
    Patch from https://bugzilla.redhat.com/show_bug.cgi?id=253996
    by Josko Plazonic

2008-01-17  Federico Mena Quintero  <federico@novell.com>

	* configure.ac: Bump version number to 2.21.0.

	* NEWS: Prepare for 2.21.0.

2008-01-15  John Robeson <johnny@localmomentum.net>

    Add more ignored files/directories to lib/config.py.in

2008-01-06  John Robeson <johnny@localmomentum.net>

    Change install xinitrc to no for slackware

2008-01-06  John Robeson <johnny@localmomentum.net>

    Make sabayon work on slackware

    Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=497471
    patch by Jared

2008-01-06  John Robeson <johnny@localmomentum.net>

    Python 2.4 compatibility path for gettext/ngettext

    Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=480508
    patch by Loïc Minier

2008-01-05  Josh Triplett  <josh@freedesktop.org>

	* admin-tool/lockdown/lockdowncombo.py:
	Remove shebang from additional non-executable Python script (not