@@ -1,5 +1,11 @@
 2008-02-15  John Robeson  <johnny@localmomentum.net>
     * TABS to spaces
+      admin-tool/profilesdialog.py
+      lib/dirmonitor.py
+      lib/storage.py
+      lib/userpofile.py
+      lib/sources/paneldelegate.py
+
 2008-02-15  John Robeson  <johnny@localmomentum.net>
 
     * remove gnomesu from desktop.in 
